@@ -47,6 +47,7 @@ Changelog
  * Fix: Prevent broken images in notification emails when static files are hosted on a remote domain (Eduard Luca)
  * Fix: Replace styleguide example avatar with default image to avoid issues when custom user model is used (Matt Westcott)
  * Fix: `DraftailRichTextArea` is no longer treated as a hidden field by Django's form logic (Sergey Fedoseev)
+ * Fix: Replace format() placeholders in translatable strings with % formatting (Matt Westcott)
 
 
 2.6.2 (19.09.2019)
